// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TokenCard component sanity matches default snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-AxirZ huOifs"
        overflow="hidden"
      >
        <div
          class="sc-AxjAm sc-fzoyAV dikUeM"
        >
          <div
            class="sc-AxjAm ksKDGX"
          >
            <svg
              class="sc-fzokOt dOfxIe"
              color="#0C0C0D"
              fill="none"
              height="2rem"
              viewBox="0 0 24 24"
              width="2rem"
            >
              <path
                d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12z"
                fill="currentColor"
              />
              <path
                d="M12 15.243l4.5-2.662-4.5 6.343-4.5-6.342 4.5 2.662v-.001zm0-10.74l4.5 7.087-4.5 2.662-4.5-2.662L12 4.502z"
                fill="#fff"
              />
            </svg>
          </div>
          <div
            class="sc-AxjAm sc-AxgMl fpKttk"
            color="gray"
            font-size="1"
            font-weight="light"
          >
            Eth
          </div>
        </div>
        <div
          class="sc-AxjAm sc-fzoyAV iJzBlK"
        >
          <div
            class="sc-AxjAm sc-AxgMl hIpdtP"
            font-size="4"
            font-weight="light"
          >
            2
          </div>
        </div>
        <div
          class="sc-AxjAm sc-AxgMl kSUJUk"
          color="gray"
          font-size="1"
          font-weight="light"
        >
          $20
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-AxirZ huOifs"
      overflow="hidden"
    >
      <div
        class="sc-AxjAm sc-fzoyAV dikUeM"
      >
        <div
          class="sc-AxjAm ksKDGX"
        >
          <svg
            class="sc-fzokOt dOfxIe"
            color="#0C0C0D"
            fill="none"
            height="2rem"
            viewBox="0 0 24 24"
            width="2rem"
          >
            <path
              d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12z"
              fill="currentColor"
            />
            <path
              d="M12 15.243l4.5-2.662-4.5 6.343-4.5-6.342 4.5 2.662v-.001zm0-10.74l4.5 7.087-4.5 2.662-4.5-2.662L12 4.502z"
              fill="#fff"
            />
          </svg>
        </div>
        <div
          class="sc-AxjAm sc-AxgMl fpKttk"
          color="gray"
          font-size="1"
          font-weight="light"
        >
          Eth
        </div>
      </div>
      <div
        class="sc-AxjAm sc-fzoyAV iJzBlK"
      >
        <div
          class="sc-AxjAm sc-AxgMl hIpdtP"
          font-size="4"
          font-weight="light"
        >
          2
        </div>
      </div>
      <div
        class="sc-AxjAm sc-AxgMl kSUJUk"
        color="gray"
        font-size="1"
        font-weight="light"
      >
        $20
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`TokenCard component sanity matches themed snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-AxirZ jnkSQq"
        overflow="hidden"
      >
        <div
          class="sc-AxjAm sc-fzoyAV dikUeM"
        >
          <div
            class="sc-AxjAm ksKDGX"
          >
            <svg
              class="sc-fzokOt dOfxIe"
              color="#1ABC9C"
              fill="none"
              height="2rem"
              viewBox="0 0 24 24"
              width="2rem"
            >
              <path
                d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12z"
                fill="currentColor"
              />
              <path
                d="M5.878 9.042v7.833H4.5v-10.5l7.281 5.27v5.23h-1.379v-4.558L5.88 9.042zm7.72 3.275v4.558h-1.379v-5.23l7.281-5.27v10.5h-1.378V9.042l-4.524 3.275z"
                fill="#fff"
              />
            </svg>
          </div>
          <div
            class="sc-AxjAm sc-AxgMl awlUH"
            color="gray"
            font-size="1"
            font-weight="light"
          >
            Mkr
          </div>
        </div>
        <div
          class="sc-AxjAm sc-fzoyAV diAjYH"
        >
          <div
            class="sc-AxjAm sc-AxgMl eIrjA-D"
            font-size="4"
            font-weight="light"
          >
            2
          </div>
        </div>
        <div
          class="sc-AxjAm sc-AxgMl jZHwLH"
          color="gray"
          font-size="1"
          font-weight="light"
        >
          $20
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-AxirZ jnkSQq"
      overflow="hidden"
    >
      <div
        class="sc-AxjAm sc-fzoyAV dikUeM"
      >
        <div
          class="sc-AxjAm ksKDGX"
        >
          <svg
            class="sc-fzokOt dOfxIe"
            color="#1ABC9C"
            fill="none"
            height="2rem"
            viewBox="0 0 24 24"
            width="2rem"
          >
            <path
              d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12z"
              fill="currentColor"
            />
            <path
              d="M5.878 9.042v7.833H4.5v-10.5l7.281 5.27v5.23h-1.379v-4.558L5.88 9.042zm7.72 3.275v4.558h-1.379v-5.23l7.281-5.27v10.5h-1.378V9.042l-4.524 3.275z"
              fill="#fff"
            />
          </svg>
        </div>
        <div
          class="sc-AxjAm sc-AxgMl awlUH"
          color="gray"
          font-size="1"
          font-weight="light"
        >
          Mkr
        </div>
      </div>
      <div
        class="sc-AxjAm sc-fzoyAV diAjYH"
      >
        <div
          class="sc-AxjAm sc-AxgMl eIrjA-D"
          font-size="4"
          font-weight="light"
        >
          2
        </div>
      </div>
      <div
        class="sc-AxjAm sc-AxgMl jZHwLH"
        color="gray"
        font-size="1"
        font-weight="light"
      >
        $20
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
